--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "expressjs": "^1.0.1",
-    "mysql2": "^2.1.0",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.1.1"
   }
 }
