--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "Narayan Pai",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "expressjs": "^1.0.1",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
